--- a/Juntando2/nbproject/private/private.properties
+++ b/Juntando2/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/student/ggomez/.netbeans/7.4/build.properties
+user.properties.file=C:\\Users\\Joni\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
