--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /Juntando2/dist/
+/anillos-items/dist/
